--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # needed to make tmux-yank work
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # makes vim color schemes behave
 set -g default-terminal "screen-256color"
